# Rubix-PingPongzz

./: Cargo.toml
apps/desktop/: Cargo.toml
apps/desktop/src/: app.rs  bootstrap.rs  lib.rs  main.rs
crates/application/: Cargo.toml
crates/application/src/: error.rs  lib.rs  rate_limit.rs
crates/application/src/dto/: message_dto.rs  mod.rs  peer_dto.rs
crates/application/src/ports/: mod.rs  network_port.rs  notification_port.rs  persistence_port.rs  security_port.rs  trust_port.rs
crates/application/src/usecases/: connect_peer.rs  discover_peer.rs  mod.rs  receive_message.rs  reset_identity.rs  send_message.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  trust.rs
crates/domain/src/errors/: domain_error.rs  mod.rs
crates/domain/src/identity/: fingerprint.rs  identity.rs  mod.rs
crates/domain/src/message/: message.rs  message_state.rs  mod.rs
crates/domain/src/peer/: mod.rs  peer.rs  peer_status.rs
crates/networking/: Cargo.toml
crates/networking/src/: error.rs  lib.rs
crates/networking/src/heartbeat/: heartbeat.rs  mod.rs
crates/networking/src/mdns/: advertiser.rs  browser.rs  mod.rs
crates/networking/src/protocol/: codec.rs  frame.rs  message_frame.rs  mod.rs
crates/networking/src/tcp/: client.rs  connection.rs  connection_manager.rs  mod.rs  server.rs
crates/networking/src/udp/: beacon.rs  broadcaster.rs  listener.rs  mod.rs
crates/notifications/: Cargo.toml
crates/notifications/src/: lib.rs  notifier.rs
crates/persistence/: Cargo.toml
crates/persistence/migrations/: 002_add_trusted_column.sql
crates/persistence/src/: error.rs  lib.rs  migrations.rs
crates/persistence/src/db/: mod.rs  sqlite.rs
crates/persistence/src/models/: mod.rs
crates/persistence/src/repositories/: message_repository.rs  mod.rs  peer_repository.rs
crates/security/: Cargo.toml
crates/security/src/: error.rs  lib.rs
crates/security/src/fingerprint/: derive.rs  mod.rs
crates/security/src/keys/: ed25519.rs  identity_keys.rs  mod.rs  x25519.rs
crates/security/src/noise/: handshake.rs  identity_bind.rs  mod.rs  transport.rs
crates/security/src/storage/: mod.rs  secure_store.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
crates/ui/src/screens/: chat_screen.rs  mod.rs  profile_screen.rs  settings_screen.rs
crates/ui/src/theme/: dark_theme.rs  mod.rs
crates/ui/src/widgets/: message_bubble.rs  mod.rs  peer_list.rs  status_indicator.rs
