[workspace]
resolver = "2"
members = [
    "apps/desktop",
    "crates/domain",
    "crates/application",
    "crates/networking",
    "crates/security",
    "crates/persistence",
    "crates/ui",
    "crates/notifications",
]

[workspace.dependencies]
async-trait = "0.1"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.9", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
dirs = "5"   # <-- added for rubix-security
thiserror = "1.0"
anyhow = "1.0"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
# Using snow (high-level Noise wrapper) instead of raw noise-protocol
snow = { version = "0.9", features = ["default-resolver"] }
noise-protocol = "0.2"
noise-rust-crypto = "0.6"
rand = "0.8"
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }
tokio-util = { version = "0.7", features = ["codec", "time"] }
bytes = "1.6"
futures = "0.3"
mdns-sd = "0.11"
rusqlite = { version = "0.31", features = ["bundled", "uuid", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
eframe = { version = "0.28", features = ["default_fonts", "glow"] }
egui = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify-rust = "4.11"
tokio-test = "0.4"
proptest = "1.4"
pretty_assertions = "1.4"
criterion = "0.5"
hex = "0.4"
base64 = "0.22"
itertools = "0.13"
libc = "0.2"

# Cryptographic primitives
chacha20poly1305 = "0.10"
argon2 = { version = "0.5", features = ["password-hash"] }
blake3 = "1.5"
hkdf = "0.12"
sha2 = "0.10"

# Testing
tempfile = "3.10"

[workspace.package]
version = "1.0.0"
authors = ["Rubix-PingPongzz Contributors"]
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true