[package]
name = "rubix-domain"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core domain types and contracts for Rubix-PingPongzz"

[dependencies]
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
pretty_assertions = { workspace = true }
tokio-test = { workspace = true }
