[package]
name = "rubix-networking"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TCP/UDP/mDNS networking with Noise encryption for Rubix-PingPongzz"

[dependencies]
rubix-domain = { path = "../domain" }
rubix-security = { path = "../security" }
rubix-persistence = { path = "../persistence" }

# Async runtime
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true

# Networking
mdns-sd.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
hex.workspace = true

# Concurrency
dashmap = "6.0"

[dev-dependencies]
tokio-test.workspace = true
pretty_assertions.workspace = true