[package]
name = "rubix-notifications"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Desktop notification system"

[dependencies]
rubix-domain = { path = "../domain" }
notify-rust = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
