[package]
name = "rubix-notifications"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OS notification infrastructure for Rubix-PingPongzz"

[dependencies]
# Application layer — port traits only
rubix-application = { path = "../application" }

# Domain layer — fingerprint types
rubix-domain = { path = "../domain" }

# Cross-platform notifications (workspace version: 4.11)
notify-rust = { workspace = true }

# Async runtime integration (workspace version)
tokio = { workspace = true }

# Structured logging (workspace version)
tracing = { workspace = true }

# Error handling (workspace version)
thiserror = { workspace = true }

# Time handling (workspace version)
chrono = { workspace = true }