[package]
name = "rubix-security"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cryptography, Noise handshake, secure storage for Rubix-PingPongzz"

[dependencies]
rubix-domain = { path = "../domain" }

uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
zeroize.workspace = true
subtle.workspace = true
hex.workspace = true
rand.workspace = true
tracing.workspace = true
libc.workspace = true

# Async runtime
tokio.workspace = true
tokio-util.workspace = true

# Security primitives
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
snow.workspace = true
argon2.workspace = true
base64.workspace = true

[dev-dependencies]
proptest.workspace = true
pretty_assertions.workspace = true
tokio-test.workspace = true
tempfile.workspace = true